--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-:root{
---cor-principal: rgb(12, 12, 190);
---cor-segundaria: rgb(255, 0, 0);
---cor-botao: rgb(255, 255, 255);
---cor-fundo:rgb(0, 0, 0);
+@import url("styles/header.css");
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
 
+:root{
+    --font-principal: "Poppis";
 }
+
 body{
-    background-color: var(--cor-fundo);
+    background-color: blueviolet;
+    font-family: var(--font-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
